Fixed alignment of ticket-list columns

--- a/app/styles/components/ticket-list.scss
+++ b/app/styles/components/ticket-list.scss
@@ -6,3 +6,7 @@
     vertical-align: middle !important;
   }
 }
+
+.verticle-align-baseline {
+  vertical-align: baseline !important;
+}
